--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
         excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</em></p>
 
         <h2>Benefícios</h2>
-        
+       <ul>
+        <li>atendimento aos clientes</li>
+        <li>Espaço deferenciado</li>
+        <li>Localização</li>
+        <li>profissionais qualificados</li>
+    </ul>
 </body>
 
 </html>
