--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
     <img src="banner.jpg" alt=" cadeira de salao " id="banner">
     <h2>Sobre a barbearia</h2>
     <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o
-        seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia. </p>
+        seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada
+        dia. </p>
     <p> <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong> </p>
     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
         excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</em></p>
 
-        <h2>Benefícios</h2>
-       <ul>
-        <li>atendimento aos clientes</li>
+    <h2>Benefícios</h2>
+    <ul>
+        <li>Atendimento aos clientes</li>
         <li>Espaço deferenciado</li>
         <li>Localização</li>
-        <li>profissionais qualificados</li>
+        <li>Profissionais qualificados</li>
     </ul>
 </body>
 
