--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div class="principal">
     <h1>Barbearia Kauany</h1>
     <img src="banner.jpg" alt=" cadeira de salao " id="banner">
     <h2>Sobre a barbearia</h2>
@@ -19,14 +20,20 @@
     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
         excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</em></p>
 
-    <h2>Benefícios</h2>
+    </div>
+    <div>
+    
+
+        <h2>Benefícios</h2>
     <ul>
         <li>Atendimento aos clientes</li>
         <li>Espaço deferenciado</li>
         <li>Localização</li>
         <li>Profissionais qualificados</li>
         
-    </ul>
+    </ul> 
+    <img src="beneficios.jpg" alt="">
+   </div>
 </body>
 
 </html>
