--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</em></p>
 
     </div>
-    <div>
+    <div class="segundo">
     
 
         <h2>Benefícios</h2>
