--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="principal">
+    <div class="principal sim">
     <h1>Barbearia Kauany</h1>
     <img src="banner.jpg" alt=" cadeira de salao " id="banner">
     <h2>Sobre a barbearia</h2>
