--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>Profissionais qualificados</li>
         
     </ul> 
-    <img src="beneficios.jpg" alt="">
+    <img src="beneficios.jpg" alt="" class="imagembeneficios">
    </div>
 </body>
 
