--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="principal sim">
-    <h1>Barbearia Kauany</h1>
+    <h1>Barbearia </h1>
     <img src="banner.jpg" alt=" cadeira de salao " id="banner">
     <h3>Sobre a barbearia</h3>
     <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o
