--- a/produtos.html
+++ b/produtos.html
@@ -10,9 +10,9 @@
 <img src="logo.png" alt="logo">
 <nav>
     <ul>
-        <li> Home </li>
-        <li> Produtos </li>
-        <li> Contato </li>
+        <li> <a href="index.html"></a>Home </li>
+        <li> <a href="index.html"></a> Produtos </li>
+        <li> <a href="index.html"></a>Contato </li>
     </ul>
 </nav>
     </header>
