--- a/produtos.html
+++ b/produtos.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos</title>
 </head>
+
 <body>
     <header>
-<img src="logo.png" alt="logo">
-<nav>
-    <ul>
-        <li> <a href="index.html"></a>Home </li>
-        <li> <a href="index.html"></a> Produtos </li>
-        <li> <a href="index.html"></a>Contato </li>
-    </ul>
-</nav>
+        <img src="logo.png" alt="logo">
+        <nav>
+            <ul>
+                <li>Home </li>
+                <li> Produtos </li>
+                <li> Contato </li>
+            </ul>
+        </nav>
     </header>
 </body>
+
 </html>
