--- a/produtos.html
+++ b/produtos.html
@@ -18,6 +18,22 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <ul>
+            <li>
+                <h2> cabelo</h2>
+                <img src="cabelo.jpg" alt="">
+                <p>corte simples de cabelo</p>
+                <p>R$ 30,00</p>
+            </li>
+            <li>
+                <h2> barb</h2>
+                <img src="barba.jpg" alt="">
+                <p>corte e desenho profissional de barba </p>
+                <p>R$ 20,00</p>
+            </li>
+        </ul>
+    </main>
 </body>
 
 </html>
