--- a/produtos.html
+++ b/produtos.html
@@ -32,6 +32,12 @@
                 <p>corte e desenho profissional de barba </p>
                 <p>R$ 20,00</p>
             </li>
+            <li>
+                <h2> combo</h2>
+                <img src="cabelo+barba.jpg" alt="">
+                <p>corte simples de cabelo+barba </p>
+                <p>R$ 45,00</p>
+            </li>
         </ul>
     </main>
 </body>
