--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     </ul> 
     <img src="beneficios.jpg" alt="" class="imagembeneficios">
    </div>
+   <button><a href="produtos.html">Produtos</a></button>
 </body>
-
 </html>
