--- a/produtos.html
+++ b/produtos.html
@@ -27,7 +27,7 @@
                 <p>R$ 30,00</p>
             </li>
             <li>
-                <h2> barb</h2>
+                <h2> barba</h2>
                 <img src="barba.jpg" alt="">
                 <p>corte e desenho profissional de barba </p>
                 <p>R$ 20,00</p>
