--- a/produtos.html
+++ b/produtos.html
@@ -40,6 +40,10 @@
             </li>
         </ul>
     </main>
+    <footer>
+        <img src="logo-branco.png" alt="">
+        <p>&copy; copyright barbearia-2024</p>
+    </footer>
 </body>
 
 </html>
