--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div class="caixa"></div>
+        <div class="caixa">
         <img src="logo.png" alt="logo">
         <nav>
             <ul>
@@ -19,6 +19,7 @@
                 <li> <a href="contato.html"></a>Contato </li>
             </ul>
         </nav>
+        </div>
     </header>
     <main>
         <ul>
