--- a/produtos.html
+++ b/produtos.html
@@ -5,41 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos</title>
-
 </head>
 
 <body>
     <header>
         <div class="caixa">
-        <img src="logo.png" alt="logo">
-        <nav>
-            <ul>
-                <li><a href="index.html"></a>Home </li>
-                <li> <a href="produtos.html"></a> Produtos </li>
-                <li> <a href="contato.html"></a>Contato </li>
-            </ul>
-        </nav>
+            <img src="logo.png" alt="logo">
+            <nav>
+                <ul>
+                    <li><a href="index.html"></a>Home </li>
+                    <li> <a href="produtos.html"></a> Produtos </li>
+                    <li> <a href="contato.html"></a>Contato </li>
+                </ul>
+            </nav>
         </div>
     </header>
     <main>
-        <ul>
+        <ul class="produtos">
             <li>
                 <h2> cabelo</h2>
                 <img src="cabelo.jpg" alt="">
-                <p>corte simples de cabelo</p>    
-                <p>R$ 30,00</p>
+                <p class="produto-descricao">corte simples de cabelo</p>
+                <p class="produto-preco">R$ 30,00</p>
             </li>
             <li>
                 <h2> barba</h2>
                 <img src="barba.jpg" alt="">
-                <p>corte e desenho profissional de barba </p>
-                <p>R$ 20,00</p>
+                <p class="produto-descricao">corte e desenho profissional de barba </p>
+                <p class="produto-preco">R$ 20,00</p>
             </li>
             <li>
                 <h2> combo</h2>
                 <img src="cabelo+barba.jpg" alt="">
-                <p>corte simples de cabelo+barba </p>
-                <p>R$ 45,00</p>
+                <p class="produto-descricao">corte simples de cabelo+barba </p>
+                <p class="produto-preco">R$ 45,00</p>
             </li>
         </ul>
     </main>
