--- a/produtos.html
+++ b/produtos.html
@@ -45,7 +45,7 @@
     </main>
     <footer>
         <img src="logo-branco.png" alt="">
-        <p class="copyright"> &copy; copyright barbearia-2024</p>
+        <p class="copyright"> &copy; copyright barbearia kauany -2024</p>
     </footer>
 </body>
 
