--- a/produtos.html
+++ b/produtos.html
@@ -23,12 +23,14 @@
     </header>
     <main>
         <ul class="produtos">
+           <a href="cabelo.html">
             <li>
                 <h2> cabelo</h2>
                 <img src="cabelo.jpg" alt="">
                 <p class="produto-descricao">corte simples de cabelo</p>
                 <p class="produto-preco">R$ 30,00</p>
             </li>
+        </a>
             <li>
                 <h2> barba</h2>
                 <img src="barba.jpg" alt="">
