--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-    <div class="principal sim">
+    <header>
+        <div class="caixa">
+            <img src="logo.png" alt="logo">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home </a></li>
+                    <li> <a href="produtos.html"> Produtos </a> </li>
+                    <li> <a href="contato.html"> Contato </a> </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <h1>Barbearia </h1>
     <img src="banner.jpg" alt=" cadeira de salao " id="banner">
     <h3>Sobre a barbearia</h3>
@@ -22,18 +33,19 @@
 
     </div>
     <div class="segundo">
-    
+
 
         <h2>Benefícios</h2>
-    <ul>
-        <li>Atendimento aos clientes</li>
-        <li>Espaço deferenciado</li>
-        <li>Localização</li>
-        <li>Profissionais qualificados</li>
-        
-    </ul> 
-    <img src="beneficios.jpg" alt="" class="imagembeneficios">
-   </div>
-   <button><a href="produtos.html">Produtos</a></button>
+        <ul>
+            <li>Atendimento aos clientes</li>
+            <li>Espaço deferenciado</li>
+            <li>Localização</li>
+            <li>Profissionais qualificados</li>
+
+        </ul>
+        <img src="beneficios.jpg" alt="" class="imagembeneficios">
+    </div>
+    <button><a href="produtos.html">Produtos</a></button>
 </body>
+
 </html>
