--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </nav>
         </div>
     </header>
+    <div class="principal">
     <h1>Barbearia </h1>
     <img src="banner.jpg" alt=" cadeira de salao " id="banner">
     <h3>Sobre a barbearia</h3>
