--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Kauany</title>
     <link rel="stylesheet" href="stily.css">
+    <link rel="stylesheet" href="produtos.css">
 </head>
 
 <body>
