--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@
             </nav>
         </div>
     </header>
+
     <div class="principal">
-    <h1>Barbearia </h1>
-    <img src="banner.jpg" alt=" cadeira de salao " id="banner">
-    <h3>Sobre a barbearia</h3>
-    <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o
-        seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada
-        dia. </p>
-    <p> <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong> </p>
-    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
-        excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</em></p>
+        <h1>Barbearia </h1>
+        <img src="banner.jpg" alt=" cadeira de salao " id="banner">
+        <main></main>
+        <h3>Sobre a barbearia</h3>
+        <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
+            para o
+            seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a
+            cada
+            dia. </p>
+        <p> <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong> </p>
+        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
+            excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</em></p>
 
     </div>
     <div class="segundo">
@@ -48,6 +52,7 @@
         <img src="beneficios.jpg" alt="" class="imagembeneficios">
     </div>
     <button><a href="produtos.html">Produtos</a></button>
+    </main>
 </body>
 
 </html>
