--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="principal">
         <h1>Barbearia </h1>
         <img src="banner.jpg" alt=" cadeira de salao " id="banner">
-        <main></main>
+        <main>
         <h3>Sobre a barbearia</h3>
         <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
             para o
