--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
     </div>
     <button><a href="produtos.html">Produtos</a></button>
     </main>
-</body>
+    <footer>
+        <img src="logo-branco.png" alt="">
+        <p class="copyright"> &copy; copyright barbearia kauany -2024</p>
+    </footer>
+    </body>
 
 </html>
