--- a/index.html
+++ b/index.html
@@ -23,21 +23,32 @@
         </div>
     </header>
 
-    <div class="principal">
-        <h1>Barbearia </h1>
+    <section class="principal">
+        <h1 class="titulo-principal">Barbearia </h1>
         <img src="banner.jpg" alt=" cadeira de salao " id="banner">
         <main>
-        <h3>Sobre a barbearia</h3>
-        <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
-            para o
-            seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a
-            cada
-            dia. </p>
-        <p> <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong> </p>
-        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
-            excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</em></p>
+            <h3>Sobre a barbearia</h3>
+            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
+                para o
+                seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
+                clientes a
+                cada
+                dia. </p>
+            <p> <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong> </p>
+            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui
+                padrão de
+                excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</em></p>
 
-    </div>
+            </section>
+            <!-- copie e cole a seção de MAPA  -->
+    <section class="mapa">
+        <h3 class="titulo-principal">Nosso estabelecimento</h3>
+        <p>Nosso estabelecimento está localizado no coração da cidade.</p>
+
+        <div class="mapa-conteudo">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4483278365396!2d-46.63466568562861!3d-23.588249068469487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum!5e0!3m2!1spt-BR!2sbr!4v1568814489656!5m2!1spt-BR!2sbr&quot; width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
+    </section> <!-- feche MAPA  -->
     <div class="segundo">
 
 
@@ -51,12 +62,12 @@
         </ul>
         <img src="beneficios.jpg" alt="" class="imagembeneficios">
     </div>
- 
+
     </main>
     <footer>
         <img src="logo-branco.png" alt="">
         <p class="copyright"> &copy; copyright barbearia kauany -2024</p>
     </footer>
-    </body>
+</body>
 
 </html>
