--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
         <h2>Benefícios</h2>
-        <div class="conteudo-beneicios"></div>
+        <div class="conteudo-beneicios">
         <ul class="lista-beneficios">
             <li>Atendimento aos clientes</li>
             <li>Espaço deferenciado</li>
@@ -63,6 +63,7 @@
             <li>Profissionais qualificados</li>
 
         </ul>
+    </div>
         <img src="beneficios.jpg" alt="" class="imagembeneficios">
     </section>
 
