--- a/index.html
+++ b/index.html
@@ -52,15 +52,13 @@
         </div>
     </section> <!-- feche MAPA  -->
     <section class="beneficios">
-
-
-        <h2>Benefícios</h2>
-        <div class="conteudo-beneicios">
+      <h2>Benefícios</h2>
+        <div class="conteudo-beneficios">
         <ul class="lista-beneficios">
-            <li>Atendimento aos clientes</li>
-            <li>Espaço deferenciado</li>
-            <li>Localização</li>
-            <li>Profissionais qualificados</li>
+            <li class="itens">Atendimento aos clientes</li>
+            <li class="itens">Espaço deferenciado</li>
+            <li class="itens">Localização</li>
+            <li class="itens">Profissionais qualificados</li>
 
         </ul>
   
