--- a/index.html
+++ b/index.html
@@ -51,25 +51,27 @@
                 100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
     </section> <!-- feche MAPA  -->
-    
+
     <section class="beneficios">
-      <h2>Benefícios</h2>
+        <h2>Benefícios</h2>
         <div class="conteudo-beneficios">
-        <ul class="lista-beneficios">
-            <li class="itens">Atendimento aos clientes</li>
-            <li class="itens">Espaço deferenciado</li>
-            <li class="itens">Localização</li>
-            <li class="itens">Profissionais qualificados</li>
+            <ul class="lista-beneficios">
+                <li class="itens">Atendimento aos clientes</li>
+                <li class="itens">Espaço deferenciado</li>
+                <li class="itens">Localização</li>
+                <li class="itens">Profissionais qualificados</li>
 
-        </ul>
-  
-        <img src="beneficios.jpg" alt="" class="imagembeneficios">
-      </div>
+            </ul>
 
-      <!-- copie e cole a seção de VIDEO -->
-    <div class="video">
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY&quot; frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+            <img src="beneficios.jpg" alt="" class="imagembeneficios">
+        </div>
+
+        <!-- copie e cole a seção de VIDEO -->
+        <div class="video">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY; frameborder=" 0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
     </section> <!-- feche BENEFICIOS -->
     </main>
     <footer>
@@ -77,4 +79,5 @@
         <p class="copyright"> &copy; copyright barbearia kauany -2024</p>
     </footer>
 </body>
+
 </html>
