--- a/contato.html
+++ b/contato.html
@@ -12,6 +12,7 @@
     <!--colar o header-->
 
     <main>
+        <form>
         <label for="nomesobrenome"> Nome e Sobrenome </label>
         <input type="text" id="nomesobrenome " class="input-padrao" required>
 
@@ -53,7 +54,7 @@
             <input type="checkbox" checked> Gostaria de receber as novidades por email
         </Label>
         <input type="submit" value="Enviar formulário" class="enviar">
-
+    </form>
     </main>
 
 </body>
