--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Barbearia Kauany</title>
     <link rel="stylesheet" href="stily.css">
     <link rel="stylesheet" href="produtos.css">
+    <link rel="stylesheet" href="menu.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home </a></li>
-                    <li> <a href="produtos.html"> Produtos </a> </li>
+                    <li> <a href="menu.css"> Produtos </a> </li>
                     <li> <a href="contato.html"> Contato </a> </li>
                 </ul>
             </nav>
