--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Kauany</title>
     <link rel="stylesheet" href="stily.css">
-    <link rel="stylesheet" href="produtos.css">
     <link rel="stylesheet" href="menu.css">
 </head>
 
@@ -17,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home </a></li>
-                    <li> <a href="menu.css"> Produtos </a> </li>
+                    <li> <a href="produtos.html"> Produtos </a> </li>
                     <li> <a href="contato.html"> Contato </a> </li>
                 </ul>
             </nav>
